[project]
authors = [{name = "Hannah Zafar", email = "hannah.zafar@nasa.gov"}]
description = "Add a short description here"
name = "gmao-image-generator"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gmao_image_generator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"

[dependency-groups]
dev = ["ipykernel"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
