[project]
authors = [{name = "Hannah Zafar", email = "hannah.zafar@nasa.gov"}]
description = "Add a short description here"
name = "gmao-image-generator"
requires-python = "== 3.10.*"
version = "0.1.0"
dependencies = ["hybig-py>=2.5.0,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gmao_image_generator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.10.0"
libgdal = ">=3.12.0,<4"

[dependency-groups]
dev = ["ipykernel"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
